--- a/resources/scss/components/article/_article.scss
+++ b/resources/scss/components/article/_article.scss
@@ -1,98 +1,109 @@
 main {
   color: rgb(41, 41, 41);
-
   margin: 0 5%;
   line-height: 1.2;
+}
 
-  .wrapper {
-    max-width: 900px;
-    margin: 0 auto;
-  }
+.wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
-  .title {
-    font-size: 46px;
-    font-weight: 700;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    text-align: center;
-    margin: 40px 20px;
-  }
+.title-block {
+  margin: 30px 20px;
+}
 
-  .subtitle {
-    width: auto;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 5px 0;
-  }
+.title {
+  font-size: 46px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
 
-  .para {
-    padding: 8px 0;
-    font-size: 20px;
-    line-height: 30px;
-    font-family: Georgia, "Times New Roman", Times, serif;
-  }
+.subtitle {
+  width: auto;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px 0;
+}
 
-  .underline {
-    text-decoration: underline;
-  }
+.para {
+  padding: 8px 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
 
-  .centered-text {
-    text-align: center;
-  }
+.underline {
+  text-decoration: underline;
+}
 
-  article {
-    padding: 20px 5%;
-  }
+.centered-text {
+  text-align: center;
+}
 
-  section {
-    margin: 30px 0;
-  }
+.info {
+  margin: 0 auto;
+  text-align: center;
+  width: 280px;
 
-  .img-container {
-    margin: 15px 0;
-    width: 100%;
-    display: flex;
-    // justify-content: center;
-    align-items: center;
-
-    img {
-      object-fit: contain;
-    }
-
-    img.code {
-      max-width: 600px;
-    }
-    img.screen-shot {
-      width: 200px;
-    }
-
-    img.full-screen {
-      object-fit: contain;
-      width: 800px;
-    }
-  }
-
-  pre {
-    background-color: #eee;
-    padding: 5px;
-  }
-  code {
-    // height: 18px;
-    color: #eee;
-    padding: 0 10px;
-    background-color: #333;
-    width: auto;
-    margin: 2px 0;
-    font-size: 16px;
-  }
-
-  ol {
-    margin-left: 20px;
-  }
-
-  span.method {
-    color: #0f2eb8;
+  .date {
     font-style: italic;
+    margin-left: 14px;
   }
+}
+
+article {
+  padding: 20px 5%;
+}
+
+section {
+  margin: 30px 0;
+}
+
+.img-container {
+  margin: 15px 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+
+  img {
+    object-fit: contain;
+  }
+
+  img.code {
+    max-width: 600px;
+  }
+  img.screen-shot {
+    width: 300px;
+  }
+
+  img.full-screen {
+    object-fit: contain;
+    width: 800px;
+  }
+}
+
+pre {
+  background-color: #eee;
+  padding: 5px;
+}
+code {
+  color: rgb(238, 238, 238);
+  padding: 0 10px;
+  background-color: rgb(51, 51, 51);
+  width: auto;
+  margin: 2px 0;
+  font-size: 16px;
+}
+
+ol {
+  margin-left: 20px;
+}
+
+span.method {
+  color: #0f2eb8;
+  font-style: italic;
 }
