--- a/resources/scss/components/article/_article.scss
+++ b/resources/scss/components/article/_article.scss
@@ -34,6 +34,10 @@ main {
   font-size: 20px;
   line-height: 30px;
   font-family: Georgia, "Times New Roman", Times, serif;
+
+  a.ref {
+    color: #580fb8;
+  }
 }
 
 .underline {
@@ -66,8 +70,6 @@ section {
 .img-container {
   margin: 15px 0;
   width: 100%;
-  display: flex;
-  align-items: center;
 
   img {
     object-fit: contain;
@@ -81,8 +83,8 @@ section {
   }
 
   img.full-screen {
-    object-fit: contain;
-    width: 800px;
+    width: 100%;
+    height: auto;
   }
 }
 
